# local-code

./: .env.example  .gitignore  .gitlab-ci.yml  CLAUDE.md  README.md  docker-compose.yml  skills-lock.json
backend/: .dockerignore  .gitignore  Dockerfile  README.md  debug_med.py  debug_min.py  debug_wrap.py  pyproject.toml  pytest.ini  update_genres.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_chatsession_task_id.py  0003_user_instructions.py
backend/app/: artifact_store.py  auth.py  config.py  db.py  llm.py  main.py  mcp_registry.py  models.py  observability.py  python_sandbox.py  runtime.py  skills_registry.py  streaming.py  tool_registry.py  utils.py
backend/app/commands/: __init__.py  base.py  dispatcher.py  feedback.py  registry.py  remember.py  stream_static.py
backend/app/graphs/: main_agent.py
backend/app/integrations/: feedback_context.py  gitlab.py
backend/app/middleware/: skills_state.py  system_message.py  tool_exclusion.py
backend/app/routes/: artifacts.py  auth.py  chat.py  commands.py  feedback.py  mcp.py  sessions.py  skills.py  tasks.py  tools.py  user_instructions.py
backend/debug_p10/: test.py
backend/debug_p5/: m.py
backend/debug_p8/: m.py
backend/debug_sb10/: m.py
backend/debug_sb11/: m.py
backend/debug_sb12/: m.py
backend/debug_sb13/: m.py
backend/debug_sb14/: m.py
backend/debug_sb15/: m.py
backend/debug_sb2/: debug_wrap.py
backend/debug_sb9/: m.py
backend/debug_sb_plot2/: m.py
backend/lc_test_sb_4r5asvh1/: exec_n96sydr_.py
backend/scripts/: build_default_template.py  check_summary.py
backend/tests/: conftest.py  test_artifact_reference_validity.py  test_artifact_store.py  test_artifacts_route.py  test_chat_golden_path.py  test_chat_reset.py  test_chat_route.py  test_chat_route_tool_rebind.py  test_chat_schema.py  test_commands_dispatcher.py  test_config.py  test_db.py  test_health.py  test_main_agent.py  test_main_agent_skills.py  test_mcp_registry.py  test_mcp_route.py  test_observability.py  test_pptx_render.py  test_python_exec_sandbox.py  test_python_sandbox.py  test_recorded_chunks_replay.py  test_remember_command.py  test_session_messages.py  test_sessions_route.py  test_skills_registry.py  test_skills_route.py  test_smoke.py  test_sql_subagent_exit_format.py  test_sql_subagent_schema.py  test_streaming.py  test_streaming_artifact_event.py  test_streaming_invariants.py  test_streaming_tools.py  test_streaming_usage.py  test_subagent_tool_exclusion_runtime.py  test_subagents.py  test_task_generator.py  test_task_runner.py  test_task_substitution.py  (+9 more)
(+169 files in other folders)
