[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.1",
    "fastmcp>=3.2.4",
    "langchain>=1.2.15",
    "langgraph>=1.1.9",
    "loguru>=0.7.3",
    "ollama>=0.6.1",
    "pypdf>=6.10.2",
]
